# motion-policy-networks

./: .gitignore  LICENSE  Licenses  README.md  jobconfig.yaml  pyproject.toml  setup.cfg
config/: franka_fabric_config.yaml  franka_robot_description.yaml
data_pipeline/: gen_data.py  process_data.py
data_pipeline/config/: franka_fabric_config.yaml  franka_robot_description.yaml
data_pipeline/environments/: base_environment.py  cubby_environment.py  dresser_environment.py  tabletop_environment.py
docker/: Dockerfile
interactive_demo/mpinets_msgs/: CMakeLists.txt  package.xml
interactive_demo/mpinets_msgs/msg/: PlanningProblem.msg
interactive_demo/mpinets_ros/: CMakeLists.txt  interaction_node.rviz  package.xml  setup.py
interactive_demo/mpinets_ros/launch/: visualize.launch
interactive_demo/mpinets_ros/meshes/: LICENSE  half_open_gripper.stl
interactive_demo/mpinets_ros/nodes/: interaction_node.py  planning_node.py
interactive_demo/mpinets_ros/rviz/: config.rviz
mpinets/: data_loader.py  geometry.py  loss.py  metrics.py  model.py  mpinets_types.py  run_inference.py  run_training.py  utils.py
mpinets/data_pipeline/: __init__.py  gen_data.py  process_data.py
mpinets/data_pipeline/environments/: base_environment.py  cubby_environment.py  dresser_environment.py  tabletop_environment.py
